package(default_visibility = ["//visibility:public"])

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
load("//tools/install:install_data.bzl", "install_data")
load(
    "@drake//tools/vector_gen:vector_gen.bzl",
    "drake_cc_vector_gen_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")




drake_cc_binary(
    name = "3RManipulator",
    srcs = ["3R.cc"],
    add_test_rule = 1,
    data = ["3R.sdf"],
   # test_rule_args = [
     #   "--simulation_time=0.1",
      #  "--target_realtime_rate=0.0",],
    deps = [
        #":dmodel",
        "//common:essential",
        "//lcmtypes:drake_signal",
        "//common:add_text_logging_gflags",
        "//common:find_resource",
        "//geometry:drake_visualizer",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/tree",
        "//systems/analysis:simulator",
        "//systems/framework",
        "//systems/primitives:constant_vector_source",
        "//systems/primitives:trajectory_source",
        "//systems/controllers:inverse_dynamics_controller",
        "//systems/controllers:inverse_dynamics",

        "@gflags",
    ],
)



drake_cc_library(
    name = "SimpleLCM",
    srcs = ["SimpleLCM.cc"],
    hdrs = ["SimpleLCM.h"],
    deps = ["//common:essential",
            "//lcmtypes:drake_signal",
            "//lcm:drake_lcm",
             "//common:find_resource",

        ],
    visibility = ["//visibility:public"],
)


install_data()

add_lint_tests()