package(default_visibility = ["//visibility:public"])

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
    "drake_cc_googletest",
    "drake_cc_library",
)
#load("//tools/install:install_data.bzl", "install_data")
load("//tools/lint:lint.bzl", "add_lint_tests")

drake_cc_binary(
    name = "Main",
    srcs = ["Main.c"],
    deps = ["ForwardDynamics"],
    visibility = ["//visibility:public"],
)


drake_cc_library(
    name = "ForwardDynamics",
    srcs = ["ForwardDynamics.c"],
    hdrs = ["ForwardDynamics.h"],
    visibility = ["//visibility:public"],
    deps = [":JainCBA"]
)

drake_cc_library(
    name = "JainCBA",
    srcs = ["JainCompositeBodyAlgorithm.c"],
    hdrs = ["JainCompositeBodyAlgorithm.h"],
    visibility = ["//visibility:public"],
)

drake_cc_googletest(
    name = "ForwardDynamics_test",
    srcs = [
        "test/ForwardDynamics_test.cc",
    ],
    deps = [":ForwardDynamics"],
)


add_lint_tests()